Fix alignment for information cards

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ header .container img {
     /* border: solid 4px blue; */
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .info-header {
